# move_hand

./: AGENT.md  README.md  plan.md  requirements.txt
config/: poses.yaml
docs/: architecture.md  ros2_interface.md  runtime_and_tests.md  windows_runbook.md
linkhand/: pyvenv.cfg
logs/tests_phase3/: test1_test2_summary.txt
logs/tests_phase4/: test_middle_home_cycle.txt
ros2_ws/: README.md
ros2_ws/docker/: Dockerfile  docker-compose.yml
ros2_ws/install/hand_bridge/lib/hand_bridge/: sim_driver_node
ros2_ws/install/hand_bridge/share/hand_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/scripts/: docker_smoke_test.sh
ros2_ws/src/hand_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/hand_bridge/hand_bridge/: sim_driver_node.py
ros2_ws/src/hand_bridge/resource/: hand_bridge
sim/: demo_all_joints.py  demo_key_control.py  demo_middle_finger.py  demo_single_joint.py  joint_controller.py  sim_load.py  test_middle_home_cycle.py
tools/: cli_control.py  self_check.py
