<?xml version="1.0"?>
<package format="3">
  <name>hand_bridge</name>
  <version>0.0.1</version>
  <description>Minimal ROS2 bridge for Linker Hand PyBullet simulation.</description>
  <maintainer email="dev@example.com">move_hand</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
